--- a/client-config.properties
+++ b/client-config.properties
@@ -3,4 +3,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/ppr
 spring.datasource.username=root
 spring.datasource.password=root
 # drop in to create the table, good for testing, comment this in production. This will create the table for you on each load of application, so you may want to comment this out after the first load
-spring.jpa.hibernate.ddl-auto=upate
+spring.jpa.hibernate.ddl-auto=update
